# Galactic-Guide

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  package.json  prototype-findings.md  pyproject.toml  turbo.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_create_satellites.py  0002_create_tles.py  0003_create_propagated_windows.py
apps/api/data/: celestrak-fallback.json
apps/api/src/galactic_api/: __init__.py  main.py
apps/api/src/galactic_api/db/: queries.py  session.py
apps/api/src/galactic_api/models/: health.py
apps/api/src/galactic_api/routers/: healthz.py  satellites.py
apps/api/src/galactic_api/scripts/: export_openapi.py
apps/api/src/galactic_api/services/: scheduler.py  tle_ingest.py
apps/api/tests/: conftest.py  test_hash.py  test_healthz.py
apps/web/: Dockerfile  package.json
apps/worker/: Cargo.toml  Dockerfile  sqlx-data.json
apps/worker/src/: config.rs  db.rs  hash.rs  job.rs  lib.rs  main.rs  propagate.rs  worker.rs
apps/worker/tests/: accuracy.rs  integration.rs
apps/worker/tests/golden/sgp4/: 20580.json  25544.json  33591.json  36585.json  44713.json
crates/viewer/: Cargo.toml
crates/viewer/src/: celestial_data.rs  orbit_renderer.rs
docs/: api.md  architecture.md  prd.md  prototype-handoff.md  roadmap.md  spec.md  testing.md
prototype/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
prototype/.storybook/: preview.ts
prototype/mocks/: 25544-trajectory.json  generate.py  satellites.json
prototype/src/: App.tsx  index.css
prototype/src/components/: Dashboard.stories.tsx  Dashboard.tsx  Globe.stories.tsx  Globe.tsx  SatellitePanel.stories.tsx  SatellitePanel.tsx  TimeControls.stories.tsx  TimeControls.tsx
prototype/src/data/: satellites.ts  trajectory.ts
prototype/src/lib/: gmst.ts  interpolate.ts  simClock.ts
scripts/: regen-goldens.py
src/: celestial_body.rs  celestial_data.rs  main.rs  orbit_renderer.rs
