[project]
name = "galactic-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.115",
    "pydantic~=2.0",
    "sqlalchemy[asyncio]~=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis~=5.0",
    "apscheduler>=3.10",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers>=4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/galactic_api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
