[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp", "streams"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "uuid"] }
nyx-space = "1.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
sha2 = "0.10"
