[package]
name = "viewer"
version = "0.1.0"
edition = "2021"
default-run = "galactic_guide"

[[bin]]
name = "galactic_guide"
path = "src/main.rs"

[[bin]]
name = "lunar_transfers"
path = "src/bin/lunar_transfers.rs"

[dependencies]
bevy = "0.13.2"
bevy_egui = "0.27.1"
nyx-space = "1.1.2"
smooth-bevy-cameras = "0.11.0"
strum = "0.26.3"
strum_macros = "0.26.4"
bevy_polyline = "0.9.0"
# console 0.16+ gates std-using items behind the `std` feature; force it on so
# indicatif 0.16.2 (pulled in by nyx-space) can find console::Term etc.
console = { version = "0.16", features = ["std"] }
